# beepbox-plug

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.txt
plugin/: config.h  gui.cpp  lib_impl.cpp  main.cpp  platform.cpp  platform.hpp  plugin.cpp  plugin.hpp  plugin_editor.cpp  plugin_editor.hpp  plugin_processor.cpp  plugin_processor.hpp  sokol.cpp  sokol_imgui.h
plugin/resource/: vst_logo.hpp
plugin_libs/: sokol_imgui.h
src/: plugin_editor.cpp  plugin_processor.cpp  plugin_processor.hpp
src/gui_libs/: sokol_imgui.h
src/plugin/: atomic_bool.h  conf.h  endianness.h  entry.c  instrument.c  instrument_impl.h  plugin.c  plugin.h  plugin_impl.h  system.h  util.h
src/plugin/include/: clap_plugin.h  instrument.h
src/plugin_gui/: CMakeLists.txt  gfx.hpp  gfx_d3d11.cpp  gfx_gl.cpp  gui.cpp  lib_impl.cpp  log.cpp  log.hpp  platform.cpp  platform.hpp  plugin_controller.cpp  plugin_controller.hpp  util.hpp
src/plugin_gui/include/: plugin_gui.h
src/synth/: CMakeLists.txt
src/synth/include/: beepbox_instrument_data.h  beepbox_synth.h
src/synth/src/: envelope.c  envelope.h  fm.c  fm.h  instrument.c  instrument.h  public.c  util.h
synth/: CMakeLists.txt  fm_algo_gen.lua
synth/include/: beepbox_instrument_data.h  beepbox_synth.h
synth/src/: envelope.c  envelope.h  fm.c  fm.h  fm_algo.c  fm_algo.h  fm_data.h  inst_info.h  instrument.c  instrument.h  public.c  public.h  util.h  wavetables.c
